--- a/Heydenreich_et_al.tex
+++ b/Heydenreich_et_al.tex
@@ -1,10 +1,8 @@
 \documentclass{aa}  
 
-% \documentclass[referee]{aa}
 \pdfoutput=1
 
 \usepackage[hidelinks]{hyperref}
-% \usepackage[section]{placeins}
 
 
 \renewcommand{\rm}{\mathrm}
@@ -27,7 +25,6 @@
 \def\bth{\b \theta'}
 \def\i{\rm{i}}
 
-%\newcommand{\todo}{\emph}
 
 \usepackage{bm}
 \usepackage{verbatim}
@@ -37,14 +34,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{txfonts}
 \usepackage[section]{placeins}
-% \usepackage{subcaption}
-%\usepackage{hyperref}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\usepackage[options]{hyperref}
-% To add links in your PDF file, use the package "hyperref"
-% with options according to your LaTeX or PDFLaTeX drivers.
-%
 \usepackage{todonotes}
 \renewcommand{\todo}{\emph}
 \begin{document} 
@@ -52,9 +41,8 @@
 
    \title{The effects of varying depth in cosmic shear surveys}
 
-%   \subtitle{}
 
-   \author{Sven Heydenreich\inst{1}%\fnmsep\thanks{sven@astro.uni-bonn.de}
+   \author{Sven Heydenreich\inst{1}
           \and Peter Schneider\inst{1} 
           \and Hendrik Hildebrandt\inst{2,1}
           \and Marika Asgari\inst{3}
@@ -74,10 +62,6 @@ Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford H
 Department of Physics and Astronomy, University College London, Gower Street, London WC1E 6BT, UK
 \and
 Leiden Observatory, Leiden University, Niels Bohrweg 2, 2333 CA Leiden, The Netherlands
-% \and
-% Service d'Astrophysique, CEA Saclay, Orme des Merisiers, B\^at 709, 91191 Gif-sur-Yvette, France
-% \and 
-% Fenglin Veteran Hospital, 2 Zhongzheng Rd. Sec. 1, Fenglin Township, Hualien 97544, Taiwan
 \\ \email{sven@astro.uni-bonn.de, peter@astro.uni-bonn.de}
              }
 
@@ -98,19 +82,14 @@ Leiden Observatory, Leiden University, Niels Bohrweg 2, 2333 CA Leiden, The Neth
 \section{Introduction}
 The discovery of cosmic shear has provided us with a new and powerful cosmological tool to empirically test the standard model of cosmology and to determine its parameters. Contrary to the analysis of the cosmic microwave background \citep[CMB, e.g.,~by][]{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the low-redshift large-scale structure and, thus, provides an excellent consistency check for the standard model. Current cosmic shear surveys are particularly sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ characterizes the normalization of the matter power spectrum and $\Omega_{\rm m}$ is the matter density parameter. Constraints on $S_8$ from the three current major cosmic shear results are all consistent with the CMB analysis by \citet{2018arXiv180706209P}. It is interesting to note, however, that they all favor values that are slightly lower than the Planck constraints of $S_8 = 0.830 \pm 0.013$. \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from an analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data, and \citet{2018PhRvD..98d3528T} constrain $S_8=0.782\pm 0.027$ using the Dark Energy Survey (DES).  Combined analyses of DES and KiDS data \citep{Joudaki:2019, asgari/etal:2019} result in a $\sim 3 \sigma$ tension with the CMB value for $S_8$. If this tension is not the manifestation of an unaccounted systematic effect, in either the cosmic shear surveys \citep{Mandelbaum:2019} or the Planck mission \citep{2016ApJ...818..132A}, it certainly merits attention. It could be interpreted as a sign of new physics exemplified by massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy, or modified gravity \citep{2016A&A...594A..14P} and coupling within the dark sector \citep{Kumar:2019}.  It could also, however, prove to be a simple statistical coincidence.
 
-%It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis by \citet{2018arXiv180706209P}. While their analysis determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from an analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data, and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Reweighting the obtained redshifts of data from DES and combining this with KiDS data \citep[][Asgari et al.~in prep.]{Joudaki:2019}, yields even higher tension with the value determined for $S_8$ by the Planck Collaboration. This discrepancy has received a lot of attention. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
-
 For current cosmic shear surveys, the estimated systematic error is becoming comparable in magnitude to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary. With surveys like the Large Synoptic Survey Telescope \citep[LSST,][]{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to begin, systematic effects in gravitational lensing have received a large amount of attention \citep[see][and references therein]{Mandelbaum:2019}.
 
 In this paper, we focus on systematic effects induced by variation in survey depth that is so far unaccounted for in cosmic shear analyses \citep{Vale:2004}.   For a survey with a fixed exposure time, varying atmospheric conditions, dithering strategies and galactic extinction all contribute to an inhomogeneous limiting magnitude as a function of sky position.   In order to assess the impact of variable depth for current and future surveys, we build an analytical model for the effect based on the survey specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}.  To the first order, the depth variation in KiDS can be modeled by a piece-wise constant depth function, which varies between each $1\,\text{deg}^2$ square pointing.   KiDS object detection is defined in the $r$-band as these images were chosen to be significantly deeper in comparison to the other optical and near-infra red filters.   We, therefore, quantify survey depth with the limiting $r$-band magnitude, as defined in \citet{2017A&A...604A.134D}.  We defer the study of multi-band variable depth and its impact on photometric redshift accuracy for a future work.
 
 This work is complementary to the analysis of \citet{Guzik:2005}, who investigate the effect of a general, position-dependent multiplicative shear bias on the shear power spectrum.  In principle, the varying depth of the source galaxy sample that we study here could be recast as a varying effective shear bias.  The inclusion of an inhomogeneous distribution of source galaxies has also been explored using mock catalogs of the Subaru Hyper Suprime-Cam Survey \citep{Shirasaki:2019}, with a focus on resulting estimation of the cosmic shear covariance matrix.
 
-%The depth of a pointing primarily influences the number density as well as the average redshift of galaxies, meaning that a variation in depth is responsible for a correlation between those two quantities (see Fig. \ref{fig:nz_of_meanz}).
-%
 
 In Sect. \ref{sec:analytic_models}, we will introduce two simple toy models to understand this effect and analyze the impact on the cosmic shear power spectrum. In Sect. \ref{sec:xipm_semianalytic}, we will estimate the effect on the shear correlation functions $\xi_\pm$ using a semi-analytic model. We will present our results in Sect. \ref{sec:results}. In Sect. \ref{sec:discussion}, we will discuss our results and comment on the impact of our used simplifications. In the appendices, we present the full derivation of our model for finite field surveys.
-%App.~A is reserved for detailed calculations that cannot be done in the main paper, in App.~B we introduce way to apply our model to a given survey footprint. App.~C is reserved for figures and tables that cannot be displayed in the main body. 
 We assume the standard weak gravitational lensing formalism, a summary of which can be found in \citet{2001PhR...340..291B}.
 
 %-------------------------------------------------------------------
@@ -124,16 +103,6 @@ We can parametrize $W$ as $W(\bm{\theta}) = 1+w(\bm{\theta})$. This implies that
 \subsection{Modelling the power spectrum}
 \label{sec:modelling_power_spectrum}
 In our first model, we describe the impact of varying depth on the power spectrum, following the simplifications described above.
-% Following \citet{1993ApJ...404..441K}, we can simulate the shear $\gamma$ from the convergence by convolution with the kernel \begin{equation}
-%\mathcal{D}(\bm{\theta}) = \frac{\theta_2^2-\theta_1^2-2i\theta_1\theta_2}{\pi |\bm{\theta}|^4}\, .
-%\end{equation}
-%
-%Similarly, an observer that measures the shear $\gamma$ can reconstruct the convergence $\kappa$ by convolution with the kernel $\mathcal{D}^*$, where ${}^*$ denotes the complex conjugate. Assuming that the optical depth, and thus the source redshift populations, vary between pointing, an observer will measure a shear-signal that is modified by a depth-function $W(\bm{\theta}) = 1-w(\bm{\theta})$, where $\langle w(\bm{\theta})\rangle=0$ holds. The reconstruction of the observed convergence $\kappa^{\rm obs}$ will thus not yield the original convergence. In particular there is no reason why the convolution with a complex kernel should have a nonzero imaginary part. This allows us to separate our received signal into E- and B-modes following \begin{equation}
-% \kappa = \kappa^E+i\kappa^B\, ,
-%\end{equation}
-%where $B$-Modes cannot be generated by a lensing signal and are thus a tracer of remaining systematics.
-%2002A&A...389..729S SRC
-%
 In accordance with the definition of the shear power spectrum \begin{equation}
 \la \hat{\gamma}(\b\ell)\,\hat{\gamma}^*(\b\ell')\ra = (2\pi)^2\delta(\b\ell-\b\ell')P(|\b\ell|) \, ,
 \label{eq:original_power_spectrum}
@@ -205,7 +174,6 @@ Ignoring correlations higher than second order in $n^i$ and $w^i$,\footnote{It i
  \end{align}
  A model correlation function for a cosmic shear survey is usually calculated by taking the average redshift distribution of a redshift bin, weighted by the number density.
  Ignoring that the depth is correlated on scales of one pointing (here at $\theta \leq \sqrt{2}^\circ$) is equivalent to setting $E(\theta)\equiv 0$. We note that there is still a correlation between $N$ and $W$ for the same galaxy.
-%For the calculation of the reference correlation functions $\xi_\pm^{ij}(\theta)$ we distribute the \textit{same} galaxies into our survey, only this time we will not order their weightings $W$ or their number densities $N$ by pointing. We can imagine this by cutting the footprint into infinitesimal elements $\d^2\b\theta$, and redistributing those at random. When we calculate the correlation function of this survey, we note that $\la n^i(\bth)\ra \la n^j(\bthp)\ra = 0$ holds for $\b\theta\neq \b 0$, as the two corresponding infinitesimal elements have uncorrelated weighting and number density. This is equivalent to setting $E(\theta)\equiv 0$.
  Performing the same calculations as above, this yields a relation between the correlation function of uniform depth, $\xi_\pm^{ij,\rm{uni}}$, and the one that is usually modeled, $\xi_\pm^{ij}$:
 \begin{equation}
 \xi_\pm^{ij}(\theta) = \left(1+\la n^iw^i\ra + \la n^jw^j\ra \right)\xi_\pm^{ij,\rm{uni}}(\theta)\, .
@@ -242,7 +210,6 @@ An inspection of KiDS-data showed that the redshift distribution of sources is h
 \caption{Source redshift distributions $p^i_m(z)$ for a selection of very shallow pointings (blue), average pointings (yellow) and very deep pointings (green). The percentage points in the legend denote to which quantile a pointing belongs, when all are ordered by their depth.}
 \label{fig:nofz_quantiles}
 \end{figure}
-% Asserting an arbitrary cosmological model, we can transform the source redshift distributions $p^i_m(z)$ into comoving distance probability distributions $\mathcal{L}^i_m(\chi)$.
 
 Given the two comoving distance probability distributions of sources, $\mathcal{L}^i_m(\chi)$ and $\mathcal{L}^j_n(\chi)$, we can compute the shear correlation functions from the underlying matter power spectrum, $P_\delta(k,\chi)$, via \citep{1992ApJ...388..272K} \begin{align}
 \label{eq:xipm-pkappa}
@@ -266,10 +233,6 @@ To calculate $\mathcal{P}_{mn}^{ij}(\theta)$, we imagine two arbitrary (infinite
 \label{eq:pmnij_corr1}
 \end{equation}
 For the calculation of $\mathcal{P}_{mm}^{ij}(\theta)$, we have to account for a different possibility: In case that the galaxies lie in the same pointing, they automatically are in the same quantile. We therefore obtain \begin{equation}
-% \mathcal{P}_{mm}^{ij}(\theta) = E(\theta)\frac{1}{10} N_m^iN_m^j + [1-E(\theta)]\frac{1}{100} N_m^i N_m^j \, .
-% \label{eq:pmnij_corr2}
-% \end{equation}
-% We can then write $\mathcal{P}_{mn}^{ij}(\theta)$ as: \begin{equation}
 \mathcal{P}_{mn}^{ij}(\theta) = E(\theta)\frac{1}{10} N_m^iN_m^j\,\delta_{mn} + [1-E(\theta)]\frac{1}{100} N_m^i N_n^j \, ,
 \label{eq:pmnij_uncorr}
 \end{equation}
@@ -338,22 +301,17 @@ The results can be seen in Fig.~\ref{fig:all_xis}.
   \end{figure*}
 We observe that for high-redshift bins, all methods yield consistent results. For low-redshift bins, there are discrepancies between the different models. However, the average-redshift weighted analytic model, as shown here, is only valid for high redshifts, whereas the auto-correlation-$\xi_+$-weighted model (not shown) is entirely dependent on the choice of $\theta_{\rm{ref}}$. For $\theta_{\rm{ref}}=11'$, both analytic models agree very well for all redshift bins. For $\theta_{\rm{ref}}=0.\!'5$, the auto-correlation weighted method agrees with the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}, the analytic method is not able to trace this change for any choice of $\theta_{\rm{ref}}$. Furthermore we note, that the effect seems to be strongest in the first redshift bin, which is not surprising, as there the average redshift between pointings varies the most (compare Fig. \ref{fig:nz_of_meanz}).
 
-The simulations and the models seem to be in relatively good agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity at large scales, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. %Furthermore, we notice some strong features in the simulations at lower values of $\theta$, which arise due to the resolution limit of the simulations.  %As the noise of the simulated correlation functions increases for decreasing $\theta$,\footnote{The logarithmic bins for the correlation functions were chosen in H17 such that the signal-to-noise ratio is roughly equal for each bin. However, in the simulations we ignore shape-noise, such that our only noise contribution is sample variance, which increases at lower $\theta$.} and we take the ratio of two functions that are subject to noise, these features can be attributed to sample variance. 
-%In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations follow a finer magnitude-binning for the number densities of galaxies. Due to the fact that the discrepancies arise predominantly on small scales, the most likely reason for the discrepancy is that the simulations take the full variations in depth into account, which include scales smaller than one pointing (especially chip positions and dithering strategies). While it is impossible to include the entire sub-pointing variations in depth into our models, we tested a sub-division of one pointing into four smaller ones, all of which have a similar depth; this lowered the tension between models and simulation. Furthermore, we tested a coarser magnitude-binning in our models, which increased the tension. These tests suggest that both small-scale effects and a finer magnitude binning at least partly negate the varying depth between pointings. Note that the seemingly better agreement between mocks and the analytic method is purely coincidental.
+The simulations and the models seem to be in relatively good agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity at large scales, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. 
 
 An additional difference between the models and simulations is, that in the models we neglect boundary effects and the sample-variance of the depth-distribution between pointings, whereas the simulations were performed with the KiDS-1000 footprint. In App.~\ref{sec:expand_eoftheta}, we develop a model to extract the correction $\xi_\pm^{ij}/\xi_{\pm}^{ij,\rm{obs}}$ for a specific survey footprint. With this model, we can estimate the impact of a correlated distribution of depth, the sample variance of the depth-distribution and boundary effects. We find that for a square footprint of $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$ with an uncorrelated depth-distribution, finite field effects are negligible.
 
 In general, the semi-analytic model predicts a stronger effect than the mocks. This is due to the fact that the mocks are subject to a redshift-cutoff at $z=2$, meaning that they do not take the high-redshift tail of galaxies into account. This is of particular importance in the first redshift bin, where this feature is especially pronounced (compare Fig.~\ref{fig:nofz_quantiles}). When the same cutoff is applied to the models, the agreement on sub-pointing scales is striking. In particular this means that the mocks slightly underestimate the effect of varying depth.
 
 \begin{figure*}
-% \begin{subfigure}{0.45\textwidth}
 $
 \begin{array}{cc}
 \includegraphics[width=0.45\textwidth]{images/mcmc_kids.pdf}&
-% \end{subfigure}
-% \begin{subfigure}{0.45\textwidth}
 \includegraphics[width=0.45\textwidth]{images/mcmc_euclid.pdf}
-% \end{subfigure}
 \end{array}$
 \caption{Recovered cosmological parameters for a variable-depth (Observed) and uniform-depth (Reference) KiDS-$450$-like (left) and KiDS-$15\,000$-like survey (right). The KiDS-$450$-like figure was computed using the covariance matrix of H18. For the KiDS-$15\,000$-like survey, we divided the covariance matrix of H18 by 30. This approximately accounts for the increased survey area of next-generation experiments, but does not factor in the increased number density and higher redshifts. Hence, this exercise provides a rough indication of the significance of varying depth effects in stage IV surveys. Both figures were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
 \label{fig:mcmc_results}
@@ -379,9 +337,7 @@ Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying valu
 \end{figure*}
 
 To check for remaining systematics, a weak lensing signal can be divided into two components, the so-called E- and B-modes \citep{2002ApJ...568...20C,2002A&A...389..729S}. To leading order, B-modes cannot be created by astrophysical phenomena and are thus an excellent test for remaining systematics. Direct E- and B-mode decomposition for cosmic shear surveys can be provided by Complete Orthogonal Sets of E- and B-mode Integrals \citep[COSEBIs,][hereafter S10]{2010A&A...520A.116S}, as they can easily be applied to real data. We note that the non-existence of B-modes does not necessarily imply that the sample is free of remaining systematics.
-To estimate the B-modes created by this effect, we extract the COSEBIs
-%, once of a reference set of correlation functions, to estimate numerical inaccuracies,\footnote{For a reference correlation function the B-Modes should be consistent with zero.} and then 
- from the correlation functions, $\xi_\pm^{\rm{obs}}$, that have been modified under the semi-analytic model, and from a reference set of correlation functions $\xi_\pm$. To be most sensitive to the effect of varying depth, we choose logarithmic COSEBIs with an angular range of $\theta_{\rm{min}}=0.\!'5$ to $\theta_{\rm{max}}=72'$. As the B-modes of the reference correlation functions are zero, they are a good test for numerical errors in the calculations. Motivated by the discussion in \citet{2017MNRAS.464.1676A}, we calculated the COSEBIs from correlation functions binned in $400\,000$ linear bins, which yielded neglible numerical errors. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Fig.~\ref{fig:bmodes_cosebi}. However, we compare the B-Modes to the ones measured by \citet{asgari/etal:2019} in KV450, which were consistent with zero. Since the B-modes created by varying depth are smaller than these by a factor of 50, we conclude that this effect cannot create measurable B-modes in the KV450 survey. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to varying depth will also yield a significant detection of B-modes. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey \citep[see][]{2018arXiv181002353A}.
+To estimate the B-modes created by this effect, we extract the COSEBIs from the correlation functions, $\xi_\pm^{\rm{obs}}$, that have been modified under the semi-analytic model, and from a reference set of correlation functions $\xi_\pm$. To be most sensitive to the effect of varying depth, we choose logarithmic COSEBIs with an angular range of $\theta_{\rm{min}}=0.\!'5$ to $\theta_{\rm{max}}=72'$. As the B-modes of the reference correlation functions are zero, they are a good test for numerical errors in the calculations. Motivated by the discussion in \citet{2017MNRAS.464.1676A}, we calculated the COSEBIs from correlation functions binned in $400\,000$ linear bins, which yielded neglible numerical errors. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Fig.~\ref{fig:bmodes_cosebi}. However, we compare the B-Modes to the ones measured by \citet{asgari/etal:2019} in KV450, which were consistent with zero. Since the B-modes created by varying depth are smaller than these by a factor of 50, we conclude that this effect cannot create measurable B-modes in the KV450 survey. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to varying depth will also yield a significant detection of B-modes. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey \citep[see][]{2018arXiv181002353A}.
 
 
 %-------------------------------------------------------------------
@@ -394,7 +350,7 @@ In the most general terms, we analyze the effects of a position-dependent select
 
 We assumed an uncorrelated distribution of the depth-function and neglected boundary effects as well as the sample variance of the depth-distribution between pointings. While the boundary effects arising from a finite survey footprint have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has fewer neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the sample variance of the depth-distribution. We assumed that the probability for any pointing to be in quantile $n$ is exactly the expectation value, namely $1/10$. While this would be true for an infinitely large survey with an uncorrelated distribution of the depth-function, it does not necessarily hold for a real survey. However, our analysis in App.~\ref{sec:expand_eoftheta} suggests that these effects are not significant for the KV450 survey. In the models, we also assumed an uncorrelated distribution of the depth-function. As can be seen in Fig \ref{fig:all_xis}, this approximation introduces a small error when compared to the simulations.
 
-In our MCMC runs, we did not account for degeneracies with other cosmological parameters or observational effects. In particular, intrinsic alignments and baryon feedback also modify the correlation functions primarily on small scales, so they are likely to be degenerate with the effect of varying depth \citep{Troxel:2015}. In an MCMC run that includes these nuisance parameters, we suspect that the parameters for intrinsic alignments and baryon feedback change to mitigate this effect, so that the impact on cosmological parameters will be smaller than in our results. %Furthermore, when including the effects of dark energy we notice that our observation of $S_8$ being constant is no longer valid: For a `Euclid-like' survey we notice a bias of $\sim 0.8\sigma$. This gives rise to the assumption that the results of an MCMC with the full parameter space, including observational effects, will differ from our results. 
+In our MCMC runs, we did not account for degeneracies with other cosmological parameters or observational effects. In particular, intrinsic alignments and baryon feedback also modify the correlation functions primarily on small scales, so they are likely to be degenerate with the effect of varying depth \citep{Troxel:2015}. In an MCMC run that includes these nuisance parameters, we suspect that the parameters for intrinsic alignments and baryon feedback change to mitigate this effect, so that the impact on cosmological parameters will be smaller than in our results. 
 
 Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. In particular, this means that a varying depth cannot explain the tension between observations of the low-redshift Universe and results from analysis of the CMB.
 
@@ -402,7 +358,6 @@ For next-generation surveys like Euclid and LSST, we have demonstrated that if v
 
 Although the analytic model (Eq.~\ref{eq:xipm_analytic}) does not fully describe the effect, it can be used as a valid approximation to estimate the importance of varying depth for an arbitrary survey: As can be seen in Fig.~\ref{fig:nz_of_meanz}, in the KiDS-survey the characteristic changes both in redshift and number density for the third redshift bin are about $0.1$. Setting $\la n^in^j\ra=\la w^iw^j\ra=\la n^iw^j\ra = 0.01$ yields $\xi^{ij}_\pm/\xi_\pm^{ij,\rm{obs}}(0)\approx 0.97$, which roughly agrees with the actual results (see Fig.~\ref{fig:all_xis}). For a survey with only half the variation in depth, one gets $\xi^{ij}_\pm/\xi_\pm^{ij,\rm{obs}}(0)\approx 0.993$. This method allows us to estimate a threshold for an acceptable variation of depth, given a required precision for the shear correlation functions.
 
-%As an outlook it would be interesting to perform a full MCMC simulation, including both cosmological and nuisance parameters. One might also check the most popular extensions to the standard model of cosmology, and see whether varying depth could cause a bias towards one of these models. Furthermore, the method developed in Appendix \ref{sec:expand_eoftheta} could be applied to the actual footprint of the KV450 survey to see whether finite field effects or a correlated distribution of $r$-band depth are significant.
 Additionally, it is interesting to note that $E(\theta)$ is the azimuthal average of the function $E(\b\theta)$ derived in Sect.~\ref{sec:model_e}, which is not isotropic. Therefore, it would be possible to observe a direction-dependent correlation function $\xi_\pm^{ij,\rm{obs}}(\b\theta)$ in future surveys. An anisotropy in the observed correlation function could be a sign for the influence of varying depth.
 
 The variations in depth will also affect the covariance of a survey, both because they modify the signal and because they introduce an additional term of sample variance in terms of the distribution of depth. This effect will be investigated in a forthcoming publication (Joachimi, Lin, et al., in prep.).
@@ -597,16 +552,12 @@ we can use the expectation value \eqref{eq:pmnabstar} to calculate \eqref{eq:pmn
 \sidecaption
 $
 \begin{array}{cc}
-% \begin{subfigure}[c]{6cm}
 \def\svgwidth{100pt}
 \hspace*{1cm}
 \input{images/e_1.pdf_tex}&
-% \end{subfigure}
-% \begin{subfigure}[c]{6cm}
 \def\svgwidth{100pt}
 \hspace*{1cm}
 \input{images/e_2.pdf_tex}
-% \end{subfigure}
 \end{array}$
 \caption[How to calculate $E_{01}(\theta)$]{Representation of how to calculate $E_{01}(\theta)$ for different values of $\theta$. For $\theta\sin(\phi)<L$, as depicted in the left part, the volume of the dashed rectangle is $V(\theta,\phi)=\theta\sin(\phi)[L-\theta\cos(\phi)]$. For $\theta\sin(\phi)>L$, as depicted in the right part, the volume of the dashed rectangle is $V(\theta,\phi)=[2L-\theta\sin(\phi)]\, [L-\theta\cos(\phi)]$.}
 \label{fig:e01theta}
